--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img src="logo.jpg" alt="Logo" class="w-10 h-10 object-contain rounded-lg shadow-sm" onerror="this.src='https://cdn-icons-png.flaticon.com/512/1904/1904425.png';">
                     IELTS Speaking AI
                 </h1>
-                <p class="text-slate-500">Professional Practice Environment</p>
+                <p class="text-slate-500">Professional Practice Environment created by Thanh Tam</p>
             </div>
             <div class="flex items-center gap-2">
                 <button id="settings-btn" onclick="toggleSettings()" class="p-3 bg-white rounded-xl shadow-sm border border-slate-200 hover:bg-slate-50 transition-all text-slate-500" title="Cài đặt API Key">
